# cv_experiment

./: .gitignore  Objects from image.ipynb  WORKSPACE
core/execution/nodes/: BUILD.bazel  result.py
voxy/: BUILD.bazel  Makefile  README.md  WORKSPACE  _config.yml  artifacts.bzl  codecov.yml  constants.bzl  go.mod  go.sum  go_deps.bzl  ibazel  package.json  pnpm-lock.yaml  pyproject.toml  skaffold.yaml  trivy.yaml  tsconfig.json
voxy/configs/cameras/: camera_config.json  cameras
voxy/configs/cameras/experimental/: edge_sandbox.yaml  ee117015-fcfe-c17b-d775-d33a3ef682ca_production_test.yaml  test.yaml  test_savannah.yaml
voxy/configs/cameras/templates/: template_prod_graph_config.yaml
voxy/configs/graphs/: default.yaml  develop.yaml  replay.yaml
voxy/configs/infra/examples/: argo-cd-example.yaml
voxy/core/common/: BUILD.bazel  queries.py
voxy/core/common/utils/: BUILD.bazel  hash_utils.py  proto_utils.py  recursive_namespace.py  registry.py
voxy/core/datasets/generators/: BUILD.bazel  association.py
voxy/core/deployments/: BUILD.bazel  portal_query_helpers.py  scoping_csv_to_graph_config.py  update_graph_configs.py
voxy/core/execution/graphs/: BUILD.bazel  abstract.py  develop.py  metrics_constants.py  production.py  replay.py
voxy/core/execution/lib/: BUILD.bazel  production_lib.py
voxy/core/execution/nodes/: BUILD.bazel  abstract.py  acausal.py  annotation.py  camera_stream.py  incident.py  incident_machine.py  incident_writer.py  mega.py  perception.py  publisher.py  state.py  temporal.py  video_stream.py  video_writer.py
voxy/core/execution/runners/: BUILD.bazel  README.md  develop.py  develop_profile.sh  entrypoint.sh  production.py  production_profile.sh  replay.py
voxy/core/execution/utils/: BUILD.bazel  README.md  aggregate_metrics.py  collate_from_log_keys.py  collate_logs.py  (+7 more)
voxy/core/incident_machine/: BUILD.bazel  controller.py  utils.py
voxy/core/incidents/: BUILD.bazel  controller.py  utils.py
voxy/core/infra/: README.md  example_kube.yaml
voxy/core/labeling/: BUILD.bazel  README.md  constants.py  video_helper_mixin.py
voxy/core/metaverse/: BUILD.bazel  metaverse.py
voxy/core/portal/: .gitignore  BUILD.bazel  build_defs.bzl  conftest.py  dump_schema.py  main.py  manage.py  migrate.py  serve.py
voxy/core/scenarios/: BUILD.bazel  evaluate_performance.py  evaluation_metrics.py  scenario_generator.py
voxy/core/scripts/: buildkite_smoke_test.sh  clear_all_caches.sh  files_without_tests.sh  local_dev.sh  ml_training_safety_vest_test.sh  ml_training_smoke_test.sh  wait_for_minikube_service_account.sh
voxy/core/state/: BUILD.bazel  controller.py  publisher.py  utils.py
voxy/core/structs/: BUILD.bazel  actor.py  associated_actor.py  associated_frame.py  associated_video.py  attributes.py  body.py  data_collection.py  datapool.py  dataset.py  ergonomics.py  event.py  extrinsics.py  frame.py  generator_response.py  incident.py  intrinsics.py  line_segment.py  model.py  scenario.py  state.py  task.py  tracklet.py  vector.py  video.py  vignette.py
voxy/core/utils/: BUILD.bazel  actionable_region_utils.py  aws_utils.py  bounded_sorted_dict.py  camera_config_utils.py  constants.py  incident_writer.py  json_utils.py  logger.py  perception_portal_graphql_session.py  print_utils.py  pyav_decoder.py  subprocess_utils.py  type_check.py  video_reader.py  video_utils.py  voxel_decorators.py  yaml_jinja.py
voxy/data/: BUILD.bazel
voxy/data/unit_test_resources/: test_graph_config.yaml  test_scenario_config.yaml  test_scenario_config_no_video.yaml
voxy/experimental/: README.md
voxy/experimental/anurag/: BUILD.bazel  README.md  add_doors.py  calibration.ipynb  doc.txt  door_classifier.py  example_kube.yaml  infer.py  inference.py  mediapipe_object_tracker.py  metrics.py  proto_test.py  record.sh  test_jupyter_notebook.ipynb  utils.py  velocity_estimator.py  vision.py
voxy/experimental/calibration/: calibrate_camera.py  video2calibrate.py
voxy/experimental/haddy/: BUILD.bazel  Ergo Analysis.ipynb  floodfill_detector.py  incident_to_voxel_videos.py  run_detector.py  run_detector_metrics_pipeline.html  run_prior_subtraction.py  run_tracker.py  test_dataset_sources.py  video_ingest_tool.py
voxy/experimental/jains/: dataset2.yaml
voxy/experimental/lazhar/: README.md  train_EMA.ipynb
voxy/experimental/nasha/: BUILD.bazel  class_annots.json  sample_dataset.py  scale_dataset.py
voxy/experimental/ramin/: bg_remove.py  coco_data.py  commandlines  convert2torchscript.sh  finetune_focal1_hyp.yaml  finetune_hyp.yaml  hardhat_.yaml  tmp.yaml  yaml_test.py
voxy/experimental/sam/: actionable_region_utils.py
voxy/experimental/shared/: get_dataset1.sh
voxy/experimental/tooling/: run-prod.sh  start-americold-cameras.sh  start-rite-hite-cameras.sh  start-uscold-cameras.sh
voxy/experimental/training/: config.json  dataset.py  loss.py  model.py  train.py  transforms.py
voxy/experimental/troycarlson/: auth0_import_command.py  generate_random_portal_data.py  generate_yt8m_sample_images.py  sync_incident_feedback_counts.sql
voxy/experimental/vivek/: get_imgs_after_lightly_filter.py  train_vit.py  vivek_experimental.yaml
voxy/go/: BUILD.bazel  README.md  tools.go  xerrrorsfix.go
voxy/lib/graphconfig/: BUILD.bazel  graphconfighelper.go  graphconfighelper_test.go
voxy/lib/publisher/: BUILD.bazel  abstract.py  kinesis.py  sns.py
voxy/lib/utils/: BUILD.bazel  fetch_camera_frames.py  gengofakes.go
voxy/protos/: BUILD.bazel  python_targets.bzl  readme.md
voxy/rules/: s3_archive.bzl
voxy/tools/: README.md  _utils.sh  apollo  argocd  authgrpcurl  aws  aws_iot_securetunneling_localproxy  bazel  bazel-diff-targets  bazelisk  black  buildifier  codecov  commitlint  darglint  devcert  eslint  flake8  gcloud  gopackagesdriver.sh  govulncheck  gsutil  gt  helm  ipython  isort  jupyter  kubectl  licenseheaders  licenseheaders-lint  minikube  pnpm  protoc  protogen  pydocstyle  pylint  python  rover  semantic-release  sematic  (+8 more)
voxy/tools/voxel/: BUILD.bazel  edge-scp  edge-scp.sh  edge-ssh  edge-ssh.sh  edge-ssm-name.sh  readme.md
(+3502 files in other folders)
