load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "update_graph_configs",
    srcs = ["update_graph_configs.py"],
    data = ["//configs"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("loguru"),
        requirement("pyyaml"),
        requirement("mergedeep"),
        "//core/utils:yaml_jinja",
        "//core/utils/logging:list_indented_yaml_dumper",
    ],
)

py_binary(
    name = "scoping_csv_to_graph_config",
    srcs = ["scoping_csv_to_graph_config.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("pandas"),
        requirement("pyyaml"),
        requirement("termcolor"),
        requirement("mergedeep"),
        ":portal_query_helpers",
        "//core/labeling/tools:sync_camera_config",
        # the following dep is commented out because it no longer exists
        # this probalbly needs to be fixed by importing the portal app lib
        # but i'm not totally certain
        # "//core/portal/utils:portal_query_helpers",
        "//core/utils/logging:list_indented_yaml_dumper",
    ],
)

py_library(
    name = "portal_query_helpers",
    srcs = ["portal_query_helpers.py"],
    visibility = ["//visibility:public"],
    deps = ["//core/utils:perception_portal_graphql_session"],
)
