load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//core/portal:__subpackages__"])

py_library(
    name = "metaverse",
    srcs = ["metaverse.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("loguru"),
        requirement("neomodel"),
        "//core/metaverse/graphql",
        "//core/utils:aws_utils",
    ],
)
