load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "graphconfig",
    srcs = ["graphconfighelper.go"],
    importpath = "github.com/voxel-ai/voxel/lib/graphconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/utils/go/filesystem",
        "//protos/perception/graph_config/v1:graph_config",
        "@com_github_hashicorp_go_set//:go-set",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "graphconfig_test",
    srcs = ["graphconfighelper_test.go"],
    deps = [
        ":graphconfig",
        "//lib/utils/go/filesystem",
        "//protos/perception/graph_config/v1:graph_config",
        "@com_github_hashicorp_go_set//:go-set",
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
    ],
)
