load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = [
    "//visibility:public",
])

py_library(
    name = "registry",
    srcs = [
        "registry.py",
    ],
)

py_library(
    name = "recursive_namespace",
    srcs = [
        "recursive_namespace.py",
    ],
)

py_library(
    name = "hash_utils",
    srcs = [
        "hash_utils.py",
    ],
)

py_library(
    name = "proto_utils",
    srcs = [
        "proto_utils.py",
    ],
    deps = [
        requirement("protobuf"),
    ],
)
