load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "association",
    srcs = [
        "association.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("loguru"),
        requirement("numpy"),
        "//core/structs",
    ],
)
